fix layout issues

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,6 +1,6 @@
 main {
   width: 100%;
-  min-height: 100vh;
+  min-height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -14,11 +14,11 @@ main {
 .container {
   height: 100%;
   font-family: Arial, Helvetica, sans-serif;
-
-  .footer {
-    width: 100%;
-    position: absolute;
-    bottom: 10px;
-    text-align: center;
-  }
+  box-sizing: border-box;
+}
+.header {
+  box-sizing: border-box;
+  width: 100%;
+  text-align: right;
+  padding-right: 10px;
 }
